--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a responsive email layout.">
-    <title>Games from the 90's</title>
+    <title>E-mail App in Vue.js</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <!--[if lte IE 8]>
@@ -70,7 +70,7 @@
                 <div class="email-item pure-g" :class="{ 'email-item-selected' : selected(index) }" v-for="email, index in filteredEmails"
                     @click="selectEmail(email, index)">
                     <div class="pure-u">
-                        <img width="64" height="64" alt="Yahoo! News&#x27; avatar" class="email-avatar" :src="email.avatar">
+                        <img width="64" height="64" alt="Yahoo! News&#x27; avatar" class="email-avatar" :src="email.avatar" :title="email.name">
                     </div>
 
                     <div class="pure-u-3-4">
